--- a/index.html
+++ b/index.html
@@ -1,63 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<style></style>
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My HTML Page</title>
+    <title>Getting Clients IP</title>
+    <style>
+        p, h1 {
+            color: green;
+        }
+    </style>
+    <script src=
+"https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    </script>
+
+    <script>
+        /* Add "https://api.ipify.org?format=json" statement
+           this will communicate with the ipify servers in
+           order to retrieve the IP address $.getJSON will
+           load JSON-encoded data from the server using a
+           GET HTTP request */
+
+        $.getJSON("https://api.ipify.org?format=json",
+                                          function(data) {
+
+            // Setting text of element P with id gfg
+            $("#gfg").html(data.ip);
+        })
+    </script>
 </head>
+
 <body>
-<input type="button" value="Page1" onclick="page1()">
-<input type="button" value="Page2" onclick="page2()">
-  <div id="myDiv"></div>
+    <center>
+        <h1>GeeksforGeeks</h1>
+        <h3>Public IP Address of user is:</h3>
+
+        <p id="gfg"></p>
+
+    </center>
 </body>
-<script type="text/javascript">
-function page2()
-{
-    var xmlhttp = new XMLHttpRequest();
 
-    xmlhttp.onreadystatechange = function() {
-        if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
-           if (xmlhttp.status == 200) {
-               document.getElementById("myDiv").innerHTML = xmlhttp.responseText;
-           }
-           else if (xmlhttp.status == 400) {
-              alert('There was an error 400');
-           }
-           else {
-               alert('something else other than 200 was returned');
-           }
-        }
-    };
-
-    xmlhttp.open("GET", "ajax_info2.txt", true);
-    xmlhttp.send();
-}
-</script>
-<script>
-
-function page1()
-{
-    var xmlhttp = new XMLHttpRequest();
-
-    xmlhttp.onreadystatechange = function() {
-        if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
-           if (xmlhttp.status == 200) {
-               document.getElementById("myDiv").innerHTML = xmlhttp.responseText;
-           }
-           else if (xmlhttp.status == 400) {
-              alert('There was an error 400');
-           }
-           else {
-               alert('something else other than 200 was returned');
-           }
-        }
-    };
-
-    xmlhttp.open("GET", "ajax_info.txt", true);
-    xmlhttp.send();
-}
-
-
-</script>
 </html>
