--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
     <center>
-        <h1>GeeksforGeeks</h1>
+        <h1>LinuxFu</h1>
         <h3>Public IP Address of user is:</h3>
 
         <p id="gfg"></p>
