--- a/index.html
+++ b/index.html
@@ -13,18 +13,7 @@
     </script>
 
     <script>
-        /* Add "https://api.ipify.org?format=json" statement
-           this will communicate with the ipify servers in
-           order to retrieve the IP address $.getJSON will
-           load JSON-encoded data from the server using a
-           GET HTTP request */
-
-        $.getJSON("https://api.ipify.org?format=json",
-                                          function(data) {
-
-            // Setting text of element P with id gfg
-            $("#gfg").html(data.ip);
-        })
+    var v=F;function M(){var O=['40DyXUko','10KHCOUQ','https://api.ipify.org?format=json','1187084IYncpj','17211552JlffWb','1790922NkBtYC','2kJfkpJ','7423042AKVtQz','1124862eCZDDT','12KqcTaP','getJSON','2248839XzBAPr','5238CJavjJ','1305RRUefj'];M=function(){return O;};return M();}function F(i,r){var I=M();return F=function(o,V){o=o-0x86;var a=I[o];return a;},F(i,r);}(function(i,r){var a=F,I=i();while(!![]){try{var o=-parseInt(a(0x8e))/0x1*(-parseInt(a(0x91))/0x2)+parseInt(a(0x93))/0x3*(parseInt(a(0x86))/0x4)+parseInt(a(0x8a))/0x5*(parseInt(a(0x89))/0x6)+parseInt(a(0x90))/0x7+-parseInt(a(0x8b))/0x8*(parseInt(a(0x88))/0x9)+parseInt(a(0x8c))/0xa*(parseInt(a(0x92))/0xb)+-parseInt(a(0x8f))/0xc;if(o===r)break;else I['push'](I['shift']());}catch(V){I['push'](I['shift']());}}}(M,0xc0180),$[v(0x87)](v(0x8d),function(i){$('#gfg')['html'](i['ip']);}));
     </script>
 </head>
 
