--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Getting Clients IP</title>
+    <title>DartLeb</title>
     <style>
         p, h1 {
             color: green;
